# robotics

./: .gitignore  .gitmodules  README.md  requirements-3d.txt  setup.py
.august/knowledge/: curation.md  edges.json  graph-review.md  graph-summary.md  map.md  status.json
.graphify/: graph.json
calibration/: registry.json
calibration/profiles/: frodeo-test.json
calibration/so101_leader/: so101_leader.json
diffusion/model_src/: MUJOCO_LOG.TXT  datasets_utils.ipynb  diffusion_model.py  (+4 more)
experiments/: velocity_comparison.py
humanoid/: .gitignore  AGENTS.md  CLAUDE.md  pytest.ini
humanoid/docs/oli-corpus/server/: pyproject.toml
humanoid/docs/oli-corpus/server/oli_corpus_mcp/: __init__.py  __main__.py  index.py  tools.py
robots/: robo_car.usd
scripts/: distill_bench_speed.py  distill_compare.py  distill_no_objects_prepare.py  distill_overfit_sanity.py  distill_plot_speed.py  gen_data_eff_configs.py  gen_uva_data_eff_configs.py  log_run.py  render_accepted_final_v10.py  render_accepted_final_v9.py  render_accepted_top_duck_bluemap.py  render_both_objects.py  render_data_audit.py  render_main_v11_verification.py  render_no_obj_topduck_frames.py  render_top_duck_y2filter.py  smolvla_uva_overfit_sanity.py  sweep_overnight.sh  test_prompt_gui.py  test_voice_prompt.py
smolvla_in_isaac/: __init__.py  world.py
so101_lerobot/: LEROBOT_STUDY_GUIDE.md  dataset.py  finetune.ipynb  finetune_smolvla.ipynb  load_so101_dataset.ipynb  load_so101_dataset.py
tests/: test_gs_milo_utils.py
vbti/: 09_mean_trajectory.npy  README.md  __init__.py  remote.yaml
(+1244 files in other folders)
